# BioMedAISchoolPatchCamelyon

./: .mypy.ini  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  submit_job.py
configs/: default.yaml
configs/data/datasets/patch_camelyon/: test.yaml  train.yaml  val.yaml
configs/data/transforms/: train.yaml
configs/model/backbone/: resnet18.yaml  vgg16.yaml
patch_camelyon/: __main__.py  patch_camelyon_model.py
patch_camelyon/data/: data_module.py
patch_camelyon/data/datasets/: __init__.py  patch_camelyon.py
patch_camelyon/modeling/: __init__.py  binary_classifier.py
patch_camelyon/modeling/backbone/: __init__.py  resnet18.py  vgg16.py
